--- a/Hexo/source/_posts/20140424.md
+++ b/Hexo/source/_posts/20140424.md
@@ -5,15 +5,13 @@ date: 2014-04-24 14:07:43
 updated: 2014-04-24 14:07:43
 comments: true
 categories: 技术
-tags: [Hexo,博客,Git,GitHub]
+tags: [Hexo,博客]
 keywords: Hexo,博客,Git,GitHub
 description: 
 ---
 
 
 倒腾了一晚上，各种更改，基本上也是OK了！
-先来张图
-![f0655e7280dc939c46921a652e7c92a3.png](https://cdn1.myhloli.com/images/2016/06/24/f0655e7280dc939c46921a652e7c92a3.png)
 以下是CSS样式，也是从别人那里copy过来稍微改了一下，自己反正蛮喜欢的~
 
 ```css
