--- a/Hexo/source/_posts/20140128.md
+++ b/Hexo/source/_posts/20140128.md
@@ -5,7 +5,7 @@ date: 2014-01-28 16:27:13
 updated: 2014-01-28 16:27:13
 comments: true
 categories: 技术
-tags: [Hexo,Github Pages,Git,博客]
+tags: [Hexo,Git,博客]
 keywords: Hexo,Github,Git,博客
 description: 
 ---
