--- a/Hexo/source/_posts/20160824.md
+++ b/Hexo/source/_posts/20160824.md
@@ -5,7 +5,7 @@ date: 2016-08-24 11:01:13
 updated: 2016-08-24 11:27:13
 comments: true
 categories: 生活
-tags: [生活,乌镇,旅游,摄影]
+tags: [生活,乌镇,旅游]
 keywords: 生活,乌镇,旅游,摄影
 description: 
 ---
