--- a/Hexo/source/_posts/20160904.md
+++ b/Hexo/source/_posts/20160904.md
@@ -5,8 +5,8 @@ date: 2016-09-04 13:17:43
 updated: 2016-09-04 13:17:43
 comments: true
 categories: 技术
-tags: [markdown,语法,工具,总结]
-keywords: 语法,markdown
+tags: [语法,Markdown]
+keywords: 语法,Markdown
 description: 
 ---
 
