--- a/Hexo/source/_posts/20160929.md
+++ b/Hexo/source/_posts/20160929.md
@@ -5,7 +5,7 @@ date: 2016-09-29 15:43:43
 updated: 2016-09-29 15:43:13
 comments: true
 categories: 技术
-tags: [Javascript,数组,前端,总结]
+tags: [Javascript,数组]
 keywords: Javascript,总结
 description: 
 ---
