--- a/Hexo/source/_posts/20140424.md
+++ b/Hexo/source/_posts/20140424.md
@@ -6,12 +6,138 @@ updated: 2014-04-24 14:07:43
 comments: true
 categories: 技术
 tags: [Hexo,博客]
-keywords: Hexo,博客,Git,GitHub
+keywords: Hexo,博客,GitHub
 description: 
 ---
 
 
 倒腾了一晚上，各种更改，基本上也是OK了！
+
+
+
+JS代码
+先本地化embed.js，这个我就不赘述了，然后在embed的头部贴入以下代码
+注意以下的
+> e.user_id == '123456'
+
+//*123456改为自己的多说ID
+
+```javascript
+function sskadmin(e) {
+    var ssk = '';
+    if(e.user_id == '123456'  ){
+        ssk = ' sskadmin '
+    }
+    return ssk;
+}
+
+//UA detect start
+function ua(e) {
+    var r = new Array;
+    var outputer = '';
+    if (r = e.match(/MSIE\s([^\s|;]+)/gi)) {
+        outputer = '<span class="ua_ie">Internet Explorer ' + r[0].replace('MSIE', '')
+    } else if (r = e.match(/Edge\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_ie">Mcirosoft Edge ' + r1[1]
+    } else if (r = e.match(/FireFox\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_firefox">Mozilla Firefox ' + r1[1]
+    } else if (r = e.match(/Maxthon([\d]*)\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_maxthon">傲游浏览器 ' + r1[1]
+    } else if (r = e.match(/UBrowser([\d]*)\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_ucweb">UC浏览器 ' + r1[1]
+    } else if (r = e.match(/MetaSr/ig)) {
+        outputer = '<span class="ua_sogou">搜狗高速浏览器'
+    } else if (r = e.match(/MicroMessenger\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_qq">WeChat ' + r1[1]
+    } else if (r = e.match(/QQBrowser\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_qq">QQ浏览器 ' + r1[1]
+    } else if (r = e.match(/QQ\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_qq">手机QQ ' + r1[1]
+    } else if (r = e.match(/MiuiBrowser\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_mi">MIUI浏览器 ' + r1[1]
+    } else if (r = e.match(/Chrome([\d]*)\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_chrome">Google Chrome ' + r1[1]
+    } else if (r = e.match(/safari\/([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_apple">Apple Safari ' + r1[1]
+    } else if (r = e.match(/Opera[\s|\/]([^\s]+)/ig)) {
+        var r1 = r[0].split("/");
+        outputer = '<span class="ua_opera">Opera Browser ' + r1[1]
+    } else if (r = e.match(/Trident\/7.0/gi)) {
+        outputer = '<span class="ua_ie">Internet Explorer 11 '
+    } else if (r = e.match(/weibo__([^\s]+)/ig)) {
+        var r1 = r[0].split("__");
+        outputer = '<span class="ua_qq">新浪微博 ' + r1[1]
+    } else if (r = e.match(/LBBROWSER/ig)) {
+            outputer = '<span class="ua_lbbrowser">猎豹安全浏览器'
+    }else {
+        outputer = '<span class="ua_other">Unknown Browser'
+    }
+    return outputer+"</span> ";
+}
+function os(e) {
+    var r = new Array;
+    var os = '';
+    if (e.match(/Windows/ig)) {
+        if (e.match(/NT 5.1/ig)) {
+            os = '<span class="os_xp">Windows XP'
+        } else if (e.match(/NT 6.1/ig)) {
+            os = '<span class="os_7">Windows 7'
+        } else if (e.match(/NT 6.2/ig)) {
+            os = '<span class="os_8">Windows 8'
+        } else if (e.match(/NT 6.3/ig)) {
+            os = '<span class="os_8_1">Windows 8.1'
+        } else if (e.match(/NT 10.0/ig)) {
+            os = '<span class="os_8_1">Windows 10'
+        } else if (e.match(/NT 6.0/ig)) {
+            os = '<span class="os_vista">Windows Vista'
+        } else if (e.match(/NT 5/ig)) {
+            os = '<span class="os_2000">Windows 2000'
+        } else if (r = e.match(/Phone OS ([^\s]+)/ig)) {
+            //WP7-7.5
+            os = '<span class="os_windows">Windows ' + r[0].split(';')[0]
+        } else if (r = e.match(/Phone ([^\s]+)/ig)) {
+            //WP8+
+            os = '<span class="os_windows">Windows ' + r[0].split(';')[0]
+        } else {
+            os = '<span class="os_windows">Windows OS'
+        }
+    } else if (r = e.match(/android ([^\s]+)/ig)) {
+        os = '<span class="os_android">' + r[0].split(';')[0]
+    } else if (r = e.match(/iPhone OS ([^\s]+)/ig)) {
+        os = '<span class="os_ios">' + r[0].replace('iPhone OS', 'iOS').replace('_', '.').replace('_', '.') +  '<span class="os_ios">for iPhone' 
+    } else if (r = e.match(/CPU OS ([^\s]+)/ig)) {
+        os = '<span class="os_ios">' + r[0].replace('CPU OS', 'iOS').replace('_', '.').replace('_', '.') +  '<span class="os_ios">for iPad' 
+    } else if (e.match(/ubuntu/ig)) {
+        os = '<span class="os_ubuntu">Ubuntu '
+    } else if (e.match(/linux/ig)) {
+        os = '<span class="os_linux">Linux '
+    } else if (r = e.match(/Mac OS X ([^\s]+)/ig)) {
+        os = '<span class="os_mac">' + r[0].split(')')[0].replace('_','.').replace('_', '.')
+    } else if (e.match(/unix/ig)) {
+        os = '<span class="os_unix">Unix '
+    } else if (e.match(/symbian/ig)) {
+        os = '<span class="os_nokia">Symbian'
+    } else if (e.match(/meego/ig)) {
+        os = '<span class="os_nokia">MeeGo'
+    } else {
+        os = '<span class="os_other">Unknown OS '
+    }
+    return os+"</span>" ;
+}
+
+
+```
+
 以下是CSS样式，也是从别人那里copy过来稍微改了一下，自己反正蛮喜欢的~
 
 ```css
@@ -173,125 +299,3 @@ description:
     /*多说UA结束*/
 ```
 
-JS代码
-先本地化embed.js，这个我就不赘述了，然后在embed的头部贴入以下代码
-注意以下的
-> e.user_id == '123456'
-
-//*123456改为自己的多说ID
-
-```javascript
-function sskadmin(e) {
-    var ssk = '';
-    if(e.user_id == '123456'  ){
-        ssk = ' sskadmin '
-    }
-    return ssk;
-}
-
-//UA detect start
-function ua(e) {
-    var r = new Array;
-    var outputer = '';
-    if (r = e.match(/MSIE\s([^\s|;]+)/gi)) {
-        outputer = '<span class="ua_ie">Internet Explorer ' + r[0].replace('MSIE', '')
-    } else if (r = e.match(/Edge\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_ie">Mcirosoft Edge ' + r1[1]
-    } else if (r = e.match(/FireFox\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_firefox">Mozilla Firefox ' + r1[1]
-    } else if (r = e.match(/Maxthon([\d]*)\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_maxthon">傲游浏览器 ' + r1[1]
-    } else if (r = e.match(/UBrowser([\d]*)\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_ucweb">UC浏览器 ' + r1[1]
-    } else if (r = e.match(/MetaSr/ig)) {
-        outputer = '<span class="ua_sogou">搜狗高速浏览器'
-    } else if (r = e.match(/MicroMessenger\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_qq">WeChat ' + r1[1]
-    } else if (r = e.match(/QQBrowser\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_qq">QQ浏览器 ' + r1[1]
-    } else if (r = e.match(/QQ\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_qq">手机QQ ' + r1[1]
-    } else if (r = e.match(/MiuiBrowser\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_mi">MIUI浏览器 ' + r1[1]
-    } else if (r = e.match(/Chrome([\d]*)\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_chrome">Google Chrome ' + r1[1]
-    } else if (r = e.match(/safari\/([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_apple">Apple Safari ' + r1[1]
-    } else if (r = e.match(/Opera[\s|\/]([^\s]+)/ig)) {
-        var r1 = r[0].split("/");
-        outputer = '<span class="ua_opera">Opera Browser ' + r1[1]
-    } else if (r = e.match(/Trident\/7.0/gi)) {
-        outputer = '<span class="ua_ie">Internet Explorer 11 '
-    } else if (r = e.match(/weibo__([^\s]+)/ig)) {
-        var r1 = r[0].split("__");
-        outputer = '<span class="ua_qq">新浪微博 ' + r1[1]
-    } else if (r = e.match(/LBBROWSER/ig)) {
-            outputer = '<span class="ua_lbbrowser">猎豹安全浏览器'
-    }else {
-        outputer = '<span class="ua_other">Unknown Browser'
-    }
-    return outputer+"</span> ";
-}
-function os(e) {
-    var r = new Array;
-    var os = '';
-    if (e.match(/Windows/ig)) {
-        if (e.match(/NT 5.1/ig)) {
-            os = '<span class="os_xp">Windows XP'
-        } else if (e.match(/NT 6.1/ig)) {
-            os = '<span class="os_7">Windows 7'
-        } else if (e.match(/NT 6.2/ig)) {
-            os = '<span class="os_8">Windows 8'
-        } else if (e.match(/NT 6.3/ig)) {
-            os = '<span class="os_8_1">Windows 8.1'
-        } else if (e.match(/NT 10.0/ig)) {
-            os = '<span class="os_8_1">Windows 10'
-        } else if (e.match(/NT 6.0/ig)) {
-            os = '<span class="os_vista">Windows Vista'
-        } else if (e.match(/NT 5/ig)) {
-            os = '<span class="os_2000">Windows 2000'
-        } else if (r = e.match(/Phone OS ([^\s]+)/ig)) {
-            //WP7-7.5
-            os = '<span class="os_windows">Windows ' + r[0].split(';')[0]
-        } else if (r = e.match(/Phone ([^\s]+)/ig)) {
-            //WP8+
-            os = '<span class="os_windows">Windows ' + r[0].split(';')[0]
-        } else {
-            os = '<span class="os_windows">Windows OS'
-        }
-    } else if (r = e.match(/android ([^\s]+)/ig)) {
-        os = '<span class="os_android">' + r[0].split(';')[0]
-    } else if (r = e.match(/iPhone OS ([^\s]+)/ig)) {
-        os = '<span class="os_ios">' + r[0].replace('iPhone OS', 'iOS').replace('_', '.').replace('_', '.') +  '<span class="os_ios">for iPhone' 
-    } else if (r = e.match(/CPU OS ([^\s]+)/ig)) {
-        os = '<span class="os_ios">' + r[0].replace('CPU OS', 'iOS').replace('_', '.').replace('_', '.') +  '<span class="os_ios">for iPad' 
-    } else if (e.match(/ubuntu/ig)) {
-        os = '<span class="os_ubuntu">Ubuntu '
-    } else if (e.match(/linux/ig)) {
-        os = '<span class="os_linux">Linux '
-    } else if (r = e.match(/Mac OS X ([^\s]+)/ig)) {
-        os = '<span class="os_mac">' + r[0].split(')')[0].replace('_','.').replace('_', '.')
-    } else if (e.match(/unix/ig)) {
-        os = '<span class="os_unix">Unix '
-    } else if (e.match(/symbian/ig)) {
-        os = '<span class="os_nokia">Symbian'
-    } else if (e.match(/meego/ig)) {
-        os = '<span class="os_nokia">MeeGo'
-    } else {
-        os = '<span class="os_other">Unknown OS '
-    }
-    return os+"</span>" ;
-}
-
-
-```
