--- a/Hexo/source/_posts/20160105.md
+++ b/Hexo/source/_posts/20160105.md
@@ -5,8 +5,8 @@ date: 2016-01-05 16:27:13
 updated: 2016-10-15 16:27:13
 comments: true
 categories: 生活
-tags: [计划,健身,技术]
-keywords: 健身,技术
+tags: [计划,总结]
+keywords: 总结
 description: 
 ---
 
