--- a/Hexo/source/_posts/20160329.md
+++ b/Hexo/source/_posts/20160329.md
@@ -5,7 +5,7 @@ date: 2016-03-29 11:29:13
 updated: 2016-03-29 11:29:13
 comments: true
 categories: 技术
-tags: [Swift,iOS,语法,总结]
+tags: [Swift,iOS,语法]
 keywords: Swift,iOS,总结,语法
 description: 
 ---
