--- a/Hexo/source/_posts/20160511.md
+++ b/Hexo/source/_posts/20160511.md
@@ -5,7 +5,7 @@ date: 2016-05-11 02:17:43
 updated: 2016-05-11 12:17:43
 comments: true
 categories: 技术
-tags: [算法,Javascript,前端,总结,FreeCodeCamp]
+tags: [算法,Javascript,前端]
 keywords: 算法,Javascript,FreeCodeCamp
 description: 
 ---
