--- a/Hexo/source/_posts/20160623.md
+++ b/Hexo/source/_posts/20160623.md
@@ -5,7 +5,7 @@ date: 2016-06-23 13:17:43
 updated: 2016-06-23 16:27:13
 comments: true
 categories: 技术
-tags: [算法,Javascript,前端,总结,FreeCodeCamp]
+tags: [算法,Javascript,前端]
 keywords: 算法,Javascript,FreeCodeCamp
 description: 
 ---
