--- a/Hexo/source/_posts/20160826.md
+++ b/Hexo/source/_posts/20160826.md
@@ -5,7 +5,7 @@ date: 2016-08-26 10:27:13
 updated: 2016-08-26 10:27:13
 comments: true
 categories: 生活
-tags: [生活,西塘,旅游,摄影]
+tags: [生活,西塘,旅游]
 keywords: 生活,西塘,旅游,摄影
 description: 
 ---
