--- a/Hexo/source/_posts/20160827.md
+++ b/Hexo/source/_posts/20160827.md
@@ -5,7 +5,7 @@ date: 2016-08-27 19:27:13
 updated: 2016-08-27 19:27:13
 comments: true
 categories: 生活
-tags: [生活,杭州,旅游,摄影]
+tags: [生活,杭州,旅游]
 keywords: 生活,杭州,旅游,摄影
 description:
 ---
