--- a/Hexo/source/_posts/20160918.md
+++ b/Hexo/source/_posts/20160918.md
@@ -5,7 +5,7 @@ date: 2016-09-18 12:22:13
 updated: 2016-09-18 12:22:13
 comments: true
 categories: 技术
-tags: [CSS,前端,总结,布局]
+tags: [CSS,布局]
 keywords: CSS,总结
 description: 
 ---
