--- a/Hexo/source/_posts/20161003.md
+++ b/Hexo/source/_posts/20161003.md
@@ -5,7 +5,7 @@ date: 2016-10-03 16:27:13
 updated: 2016-10-18 10:17:13
 comments: true
 categories: 技术
-tags: [算法,Javascript,前端,总结,FreeCodeCamp]
+tags: [算法,Javascript,前端]
 keywords: 算法,Javascript,FreeCodeCamp
 description: 
 ---
