--- a/Hexo/source/_posts/20161020.md
+++ b/Hexo/source/_posts/20161020.md
@@ -5,7 +5,7 @@ date: 2016-10-20 13:17:43
 updated: 2016-10-20 16:27:13
 comments: true
 categories: 技术
-tags: [正则,前端,总结]
+tags: [正则,前端]
 keywords: 正则,前端,总结
 description: 
 ---
